# harmony_server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: audit.yml  general.yml  genesal.yml
.sqlx/: query-0ab5f6ffa87f411f38e0d215412da559f0660d8ef9e1c5931ef6bd2854c0bc5e.json  query-800e4dba9540a4748f7b6ad40b8f202a260b985b6729007df1bdbd4620db2583.json  query-810f9468c3d69cffa133b2b0aaae899120570f16f6047f7ff9c398a97b9f5bdf.json  query-b244e1bc16b352c9e8b5ec665e8ece0de167cde882c9c9fc8f3e2edc8d8a347b.json  query-e176b57d5640512940572adbffbc0778dd5bf3d0d365a738c82073f895ad69c6.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
configuration/: base.yaml
migrations/: 20240418210000_create_categories_table.sql  20240418210157_create_beneficiaries_table.sql  20240418210207_create_users_table.sql  20240418210216_create_transactions_table.sql  20240418210222_create_allergies_table.sql  20240418210301_create_messages_table.sql  20240418210317_create_connections_table.sql  20240422175207_create_userauth_table.sql
scripts/: init_db.sh
src/: configurations.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: email.rs  password.rs  user.rs
src/routes/: mod.rs
src/routes/allergy/: allergies_get.rs  allergy_create.rs  allergy_delete.rs  mod.rs
src/routes/beneficiary/: beneficiaries_get.rs  beneficiary_create.rs  beneficiary_delete.rs  beneficiary_get.rs  beneficiary_update.rs  mod.rs
src/routes/connection/: disconnect.rs  health_check.rs  login.rs  mod.rs
src/routes/login/: mod.rs
src/routes/message/: message_create.rs  message_delete.rs  message_update.rs  messages_get.rs  mod.rs
src/routes/transaction/: mod.rs  transaction_create.rs  transaction_delete.rs  transaction_update.rs  transactions_get.rs
src/routes/user/: mod.rs  user_create.rs  user_delete.rs  user_get.rs  user_update.rs  users_get.rs
tests/: health_check.rs  mod.rs
tests/allergy/: allergies_get.rs  allergy_create.rs  allergy_delete.rs
tests/beneficiary/: beneficiaries_get.rs  beneficiary_create.rs  beneficiary_delete.rs  beneficiary_get.rs  beneficiary_update.rs
tests/connection/: disconnect.rs  health_check.rs  login.rs  mod.rs
tests/domain/: email.rs  mod.rs  password.rs
tests/login/: mod.rs
tests/message/: mod.rs
tests/transaction/: mod.rs
tests/user/: mod.rs
