[package]
name = "harmony_server"
version = "0.1.0"
edition = "2021"
authors = ["SoapyDev <alexandre.beauchamp.thibault@gmail.com>"]

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "harmony_server"


[dependencies]
actix-web = "^4"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
config = "^0.14"
uuid = { version = "^1.8", features = ["v7"] }
chrono = { version = "^0.4", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "^0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]


[dev-dependencies]
serde_json = "^1"
