[package]
name = "harmony_server"
version = "0.1.0"
edition = "2021"
authors = ["SoapyDev <alexandre.beauchamp.thibault@gmail.com>"]

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "harmony_server"


[dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
actix-web = "^4"
actix-web-lab = "^0.20"
serde = { version = "^1", features = ["derive"] }
serde-aux = "^4"
serde_json = "^1"
config = "^0.14"
uuid = { version = "^1.8", features = ["v7", "serde"] }
chrono = { version = "^0.4", default-features = false, features = [
	"clock",
	"serde",
] }

anyhow = "^1.0"
thiserror = "^1.0"
tracing-actix-web = "^0.7"
tracing = { version = "^0.1", features = ["log"] }
tracing-subscriber = { version = "^0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "^0.3"
tracing-log = "^0.2"

secrecy = { version = "^0.8", features = ["serde", "alloc"] }
unicode-segmentation = "^1.10"
validator = "0.16"
argon2 = { version = "^0.5", features = ["std"] }
rand = { version = "^0.8", features = ["std_rng"] }

[dependencies.sqlx]
version = "^0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]


[dev-dependencies]
once_cell = "^1.19"
claims = "^0.7"
fake = { version = "~2.9", features = ["chrono", "uuid"] }
reqwest = { version = "^0.12", features = ["json"] }
